feat: wire Jenkins WAR, groovy-all runtime, and JVM opens for integration tests
Add jenkinsWar configuration so JenkinsRule's WarExploder can locate the WAR
at test time via jth.jenkins-war.path system property. Add isolated
integrationTestGroovyAllRuntime configuration (no extendsFrom) to supply
groovy-all:2.4.21 at JVM runtime only — bypasses the groovy-all exclusion on
implementation so SandboxInterceptor's static initializer can load
SqlGroovyMethods without the 2.4 jar polluting the compile classpath and
breaking Spock 2.x. Add --add-opens flags required by Jenkins' XStream/Guice
reflection under Java 17 strong encapsulation. Filter hpiFiles to actual
.hpi/.jpi archives so transitive JARs don't leak onto the test classpath.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>